--- a/index.htm
+++ b/index.htm
@@ -153,15 +153,15 @@ img {
 </div2>
 <ul>
   <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="about.htm">About</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Safety</a>
     <div3 class="dropdown-content">
-      <a href="video.htm">Safety in Design</a>
-      <a href="#">Hazardous Area Classification</a>
-      <a href="#">HAZID facilitation</a>
-      <a href="#">Risk Assessment facilitation</a>
-      <a href="BHP.pdf">HAZOP facilitation</a>
+      <a href="Hazop.htm">HAZOP</a>
+      <a href="Hazid.htm">HAZID</a>
+      <a href="Risk Assessment.htm">Risk Assessment</a>
+      <a href="Hazardous Areas.htm">Hazardous Area Assessment</a>
+      <a href="Safety.htm">Safety In Design</a>
     </div3>   
   </li>
   <li class="dropdown">
@@ -190,4 +190,9 @@ img {
 
 </body>
 </html>
+
+
+
+
+
 
