--- a/Hazop.htm
+++ b/Hazop.htm
@@ -83,7 +83,7 @@ products</tr>
 </tr>
 <tr>
 </table>
-<img src="hazop projects.jpg" alt=" "style="width:800px;height:450px;"></p>
+<p><img src="hazop projects.jpg" alt=" "style="width:800px;height:450px;"></p>
 
 <h1>Participation in major Project HAZOP Workshops include:</h1>
 
