--- a/Hazop.htm
+++ b/Hazop.htm
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>About page</title>
+<title>Hazop page</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body style="background-color:#83CBEB;">
 <style>
+div {
+  width:900px;
+  margin:auto;
+}
+
 #hazop {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
@@ -31,7 +36,95 @@
 </style>
 </head>
 <body>
-<h1> </h1><br>
+<div>
+<h1><img src="RT.png" alt=" "style="float:left;width:55px;height:55px;">
+&nbsp;&nbsp;HAZARD AND OPERABILITY STUDIES ( HAZOP )</h1><br>
+<p>A Hazard and Operability Study (HAZOP) has become an accepted Risk Assessment procedure for the evaluation of process facilities. The HAZOP procedure is a systematic method for interrogating the design of a system (process and other) to determine ways in which operation of the design could deviate from the design intent, resulting in hazardous or unacceptable operational consequences.  It is normally carried out by a team of individuals who are engaged in and have detailed knowledge of the design, and who are guided by a facilitator with a strong background in the HAZOP procedure. The HAZOP procedure was originally developed by Imperial Chemical Industries (ICI), UK during the 1960's, then further developed by the Institution of Chemical Engineers in 1977, and the name HAZOP subsequently formalised in a publication by Trevor Kletz in 1983.</p>
+<p>In 1988 Dr Geoff Duckworth underwent formal training in the HAZOP procedure by Det Norsk Veritas while engaged as a senior process engineer on the detailed design and construction of a Major Hazard Facility, (a 20,000 tpa sodium cyanide chemical plant). Since then he has either participated, or acted as a HAZOP facilitator on numerous Major Hazard oil, gas, chemical, mineral and waste treatment process plant.</p>
+<p>For facilitation of a HAZOP study, Resource Technology applies the principles and procedures in accordance with Australian Standard  AS IEC 61882. This standard lays down the procedures for Initiation, Scope and Objectives, Roles and Responsibilities, Preparatory Work, Workshop Session, Documentation and Follow-up.</p>
+<p>Over time a HAZOP has become an accepted procedure for evaluating designs of both Major Hazard Facilities (which will normally involve flammable and explosive (and or toxic) gases, liquids and solids with the potential for incidents that can impact beyond the facilities boundaries, and process facilities of a less hazardous and more general nature, where incidents (with perhaps the exception of environmental) will likely be confined within the facilities boundaries.<img src="cyan.jpg" alt=" " style="float:right;width:350px;height:300px;"></p>
+<p> Work Safe Australia and the State Work Health and Safety Acts place a duty of care on designers to ensure their designs are without risk to Health and Safety. While not mandatory for facilities that do not qualify as Major Hazard Facilities, the implementation of HAZOP in the design and construction phases is a valid approach to:</p>
+<p>1. Ensure that a <b>Safety in Design</b> approach has been employed in the conduct of the design</p>
+<p>2. Provide a recognised method to scrutinize the intended design of a facility for:</p>
+<ol>
+<li>Possible causes of system failure.</li>
+<li>Consequences that might evolve as a result of failure.</li>
+<li>Adequacy of safeguards.</li>
+<li>Identification for the need for additional actions that would result in a change of the intended design.</li>
+</ol>
+<p>Since it requires the systematic examination of all relevant parts of the design by a team of professionals, the conduct of a HAZOP can be a time consuming and, as a result, expensive procedure.The primary documents used in the conduct of a HAZOP are the Piping and Instrument Diagrams (P&IDs). The following table provides a guide as to the number of P&IDs required to be reviewed and an indicative time allowance per P&ID for various types of process facilities. </p>
+
+<table id="hazop">
+  <tr>
+    <th>Plant Type</th>
+    <th>Classification</th>
+    <th>Hazards</th>
+    <th>No. of P&IDs</th>
+    <th>hr/P&ID</th>
+  </tr>
+<tr>
+<td>Ammonia (Nat Gas)</td>
+<td>Major Hazard Facility</td>
+<td>CH4, NH3, H2, CO2, High Pressure, explosion, fire, toxic, cryogenic,</td>
+<td>86</td>
+<td>3.7</td>
+</tr>
+<tr>
+<td>HH Phosphoric Acid</td>
+<td>Hazardous Facility</td>
+<td>HF, SiF4, H2SiF6, Hot H2SO4, corrosive, toxic</td>
+<td>44</td>
+<td>2.3</td>
+</tr>
+<tr>
+<td>Cyanide Skid</td>
+<td>Novel Hazardous Facility</td>
+<td>CH4, HCN, NaCN, NaOH, H2, fire, explosion, toxic</td>
+<td>9</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td>Gold Heap Leach</td>
+<td>Hazardous Facility</td>
+<td>NaCN, Toxic</td>
+<td>11</td>
+<td>1.5</td>
+</tr>
+<tr>
+<td>Gold CIL CIP</td>
+<td>Process Facility</td>
+<td>NaCN, Toxic</td>
+<td>42</td>
+<td>0.6</td>
+</tr>
+<tr>
+<td>Gold Ball Mill</td>
+<td>Facility Expansion</td>
+<td>Operable Maintainable</td>
+<td>20</td>
+<td>0.4</td>
+</tr>
+<tr>
+<td>Gold Leach Tank</td>
+<td>Facility Expansion</td>
+<td>Operable Maintainable</td>
+<td>12</td>
+<td>0.4</td>
+</tr>
+<td>Differential Flotation</td>
+<td>Process Facility</td>
+<td>Operable Maintainable</td>
+<td>42</td>
+<td>0.4</td>
+</tr>
+
+</table>
+<p>For a Major Hazard Facility, such as a natural gas based ammonia plant, 86 P&IDs will need to be reviewed at a time requirement of 3.7 hours per P&ID. The total duration for a HAZOP is then 86 x 3.7 hrs = 318 hours or about 8 weeks</p>
+<p>For the evaluation of Major Hazard Facilities, this time and expense is considered to be justified, and is often a mandatory requirement of various regulatory authorities. A duration of 6 to 8 weeks for a complex oil/gas or chemical process is not uncommon.
+</p>
+<p><img src="mill.jpg" alt=" " style="float:left;width:400px;height:300px;"> By comparison a mineral processing facility, such as gold or copper ore beneficiation & extraction might involve 42 P&IDs at and average 0.5 hours per P&ID and thus a duration of 3 days. </p> <p>Advantage can be taken of the fact that these flowsheets involve a lot of commonality, and reference to previous plant HAZOPs on this type of plant can expedite the procedure </p>
+<p> It is common to expand the capacity of these types of plant by the addition of additional grinding capacity, for example, the addition of a second or third ball mill, or by increasing leach residence time by an additional CIL leach tank.</p> <p> For a gold mill progression from an initial oxidised ore orebody, to a harder sulphide ore deposit is often achieved by additional grinding capacity, addition of a sulphide flotation circuit and possibly additional leach capacity.</p>
+</div>
 
 </body>
 </html>
