--- a/publications.htm
+++ b/publications.htm
@@ -36,13 +36,14 @@ div {
 <li><b> G. Duckworth and P. Shukla. </b> (2015) <i>Mine Site Cyanides. </i> The Chemical Engineer. March</li><br>
 <li><b> G. Duckworth and C. Dunks. </b> (2015) <i>Synergen Met Technology for Minesite Production of Cyanide. </i>  Meeting of the Joint Chemical Engineering Committee, Queensland. April</li><br>
 <li><b> L. Henderson, P. Shukla, V. Rudolph, G. Duckworth. </b> (2020) <i> Production of Cyanide using Thermal Plasma Technology: A Thermodynamic Analysis and Experimental Evaluation of Specific Energy Consumption. </i> Industrial & Engineering Chemistry Research.</li><br>
+</ul>
+<h2>Presentations</h2>
+<ul> 
 <li><b> G. Duckworth. </b> (2023) <i>Safety in Design - Chemical Processes. </i>Presentation to Lycopodium Minerals Engineering, Brisbane.</li><br>
 <li><b> G. Duckworth. </b> (2024) <i>Safety in Design - Hydrometallurgical Processes. </i>Presentation to Lycopodium Minerals Engineering, Brisbane.</li><br>
 <li><b> G. Duckworth. </b> (2024) <i>Safety in Design - Precipitation, Solvent Extraction, Electrowinning. </i>Presentation to Lycopodium Minerals Engineering, Brisbane.</li><br>
 <li><b> G. Duckworth. </b> (2024) <i>Safety in Design - Crystallization. </i>Presentation to Lycopodium Minerals Engineering, Brisbane.</li><br>
-
 </ul> 
-
 
 <h2>Patents</h2>
 <ul> 
