--- a/Hazid.htm
+++ b/Hazid.htm
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>About page</title>
+<title>Hazid page</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body style="background-color:#83CBEB;">
 <style>
-#hazop {
+div {
+  width:900px;
+  margin:auto;
+}
+
+#hazid {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
 
-#hazop td, #hazop th {
+#hazid td, #hazid th {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 1px;
 }
 
-#hazop tr:nth-child(even){background-color: #f2f2f2;}
+#hazid tr:nth-child(even){background-color: #f2f2f2;}
 
-#hazop tr:hover {background-color: #ddd;}
+#hazid tr:hover {background-color: #ddd;}
 
-#hazop th {
-  padding-top: 12px;
-  padding-bottom: 12px;
+#hazid th {
+  padding-top: 1px;
+  padding-bottom: 1px;
   text-align: left;
   background-color: #04AA6D;
   color: white;
@@ -31,7 +36,243 @@
 </style>
 </head>
 <body>
-<h1> </h1><br>
+<div>
+<h1><img src="RT.png" alt=" "style="float:left;width:55px;height:55px;">
+&nbsp;&nbsp;HAZARD IDENTIFICATION STUDIES ( HAZID )</h1><br>
+<p>The importance of incorporating safety in the design of process facilities was emphasised by the publication of  <b>Flowsheeting for Safety, Wells, Seagrave and Whiteway</b> by the Institution of Chemical Engineers in 1976. This publication drew attention to the typical hazards potentially present in chemical processes, and listed some major techniques that could be used to identify hazards. In particular Hazard Analysis as presented by Kletz, T. 1971 and Lawley, H.G. 1973 were noted. Decisions made in the early stages of a design have a large impact on later stages so it is important that safety is considered early on and throughout the development of a process facility.</p>
+<p>The Australian Workplace Health and Safety regulations impose requirements on project developers and designers to identify risks that may be present in their designs. In particular regulations 554, 564, 565, 556, and 566 require the designers to: </p>
+<ul>
+<li> Identify Risks,</li>
+<li> Analyse Risks,</li>
+<li> Evaluate Risks,</li>
+<li> Treat Risks.</li>
+</ul>
+<p> While many approaches can be used to carry out this requirement, a HAZID (Hazard Identification) workshop, which is carried out by a multidiscipline team of individuals knowledgeable in the process and the specific design, and guided by an individual experienced in the HAZID procedure has become a widely adopted approach. This method divides the design into manageable portions and applies a suitable set of guidewords to act as prompts to  identify hazards. Ranking the hazards identified by severity of consequence and probability of occurrence is then applied and suitable hazard mitigations proposed.</p>
+<p>This is particularly important  for projects that are identified as <b> Major Hazard Facilities</b>, and is a mandatory requirement in a number or jurisdictions. For example the NSW State Environment Planning Policy (SEPP)
+requires developers and consent authorities to:</p>
+<ul>
+<li>Assess hazard risks associated with a proposed development before giving approval for construction and operation.</li>
+<li>Provide an integrated process for the assessment and management of potentially hazardous development proposals which includes performing a preliminary hazard analysis to support the development application by showing that risk levels do not preclude approval.</li>
+</ul>
+<p>Safe Work Australia determines whether a proposed development is to be classified as a <b>Major Hazard Facility</b> based on the potential for a major accident to occur at the facility with reference to:</p>
+<ul>
+<li>The quantity and combination of WHS Regulation Schedule 15 chemicals present or likely to be present at the facility.</li>
+<li>The type of activity at the facility that involves the Schedule 15 chemicals</li>
+<li>Land use and other activities in the surrounding area.</li>
+</ul>
+<p>In addition to providing a list of specific chemicals in Schedule 15, threshold quantities are also specified and hazardous chemical types are included as follows:</p>
+<ul>
+<li>Explosive materials</li>
+<li>Compressed and liquified gases</li>
+<li>Flammable materials</li>
+<li>Oxidising materials</li>
+<li>Peroxides</li>
+<li>Toxic solids and liquids</li>
+</ul>
+<p>The emphasis on Hazardous chemicals and materials for a <b>Major Hazard Facility</b> naturally drives the selection of guide words for the HAZID workshop, typically along the following lines:</p>
+<table id="hazid">
+  <tr>
+    <th>Category</th>
+    <th>Guide Word</th>
+    <th>Guide Prompt</th>
+  </tr>
+<tr>
+<td>Plant Area</td>
+<td>Hazardous Substance</td>
+<td><ul>
+<li>Flammability</li>
+<li>Reactivity</li>
+<li>Corrosivity</li>
+<li>Toxicity</li></td>
+</tr>
+<tr>
+<td> </td>
+<td>Process Upset</td>
+<td><ul>
+<li>Flow</li>
+<li>Temperature</li>
+<li>Pressure</li>
+<li>Chemistry</li></td>
+</tr>
+<tr>
+<td> </td>
+<td>Equipment failure</td>
+<td><ul>
+<li>Vessels</li>
+<li>Piping, valves</li>
+<li>Safety devices</li>
+<li>Control system</li></td>
+</tr>
+<tr>
+<td> </td>
+<td>Utility failure</td>
+<td><ul>
+<li>Electric power</li>
+<li>Instrument/plant air</li>
+<li>Water</li>
+<li>Steam</li>
+<li>Fuel</td>
+</tr>
+<tr>
+<td> </td>
+<td>Environment</td>
+<td><ul>
+<li>Loss of containment</li>
+<li>Air</li>
+<li>Water</li>
+<li>Spill</li>
+<li>Waste</td>
+</tr>
+</table>
+<p><img src="smelting.jpg" alt=" " style="float:left;width:300px;height:200px;">The requirement to ensure safety in design requires that a similar approach be taken with the development of projects that are not Major Hazard Facilities, and many (and perhaps the majority) of manufacturing and mineral processing designs fall into this category. These types of processes are not free of hazards, but the hazards are local to the operation and the severity limited to impact on workers at the specific part of the facility.
+For these types of facilities the guide words applicable to a Major Hazard Facility are not particularly appropriate. A more local focus on the guide words is required.<br><br> As a guide to the hazards likely to be present, the following table is based on recent data compiled by Safe Work Australia for the causes of serious accidents and fatalities in the Australian manufacturing and mining sector. </p>
+<table id="hazid">
+  <tr>
+    <th>Cause</th>
+    <th>% of total </th>
+  </tr>
+<tr>
+<td>Falls, slips, trips</td>
+<td>15</td>
+</tr>
+<tr>
+<td>Striking objects with body</td>
+<td>4</td>
+</tr>
+<tr>
+<td>Struck by moving object</td>
+<td>41</td>
+</tr>
+<tr>
+<td>Stress</td>
+<td>15</td>
+</tr>
+<tr>
+<td>Heat, electricity, other environment</td>
+<td>4</td>
+</tr>
+<tr>
+<td>Chemicals, substances</td>
+<td>1</td>
+</tr>
+<tr>
+<td>Vehicle incidents</td>
+<td>21</td>
+</tr>
+</table>
+
+<p>It is clear that for these types of industry, the causes of physical accidents are the main hazards. Incidents involving Dangerous goods and Schedule 15 chemicals are minor hazards.</p>  <p>In addition, for these types of developments, it is often desirable to combine a <b>Design Review</b> and a <b>HAZID workshop</b> into a single meeting. This requires a broadening of the guide word approach, because the focus of a design review is not just hazards. Typically a design review focus is interrogation of the design for the following:</p>
+<ul>
+<li>Good engineering practice</li>
+<li>Code compliance and standards</li>
+<li>Design standards for natural events, wind, cyclone, earthquake</li>
+<li>Considerations that may impact plant efficiency, throughput, quality control (sampling, onstream analysis)</li>
+<li>Practical considerations such as operation, maintenance and inspection access</li>
+<li>Plant roads and traffic movements</li>
+<li>Requirement and location of utility stations</li>
+<li>Access to plant areas for clean-up</li>
+<li>Practical considerations that relate to site specific conditions or restrictions</li>
+<li>Segregation of mine vehicles and plant vehicles</li>
+<li>Construction issues such as crane access, crane reach, heavy lifts</li>
+<li>Construction issues such as interaction with operating plant</li>
+<li>Layout issues such as pipe rack road crossings, culverts</li>
+<li>Ground conditions, drainage, flooding, foundations</li>
+<li>Dangerous goods storage, bunding, hazardous area classification requirements</li>
+<li>Weather protection wind, rain, temperature extremes</li>
+<li>Materials of construction, requirements for double walled piping</li>
+<li>Plant lighting requirements</li>
+<li>Impact on plant neighbours</li>
+<li>Plant safety and hazards, storage of dangerous goods</li>
+</ul>
+
+
+Resource Technology has found the approach below useful for this type of facility study.</p>
+<table id="hazid">
+  <tr>
+    <th>Category</th>
+    <th>Guide Word</th>
+    <th>Guide Prompt</th>
+  </tr>
+<tr>
+<td>Plant Area</td>
+<td>Access</td>
+<td><ul>
+<li>Operability</li>
+<li>Maintenance</li>
+<li>Construction & Commissioning</li>
+<li>Crane access & heavy lifts</li>
+<li>Vehicle movements</li></td>
+</tr>
+<tr>
+<td> </td>
+<td>Spillage, Flooding</td>
+<td><ul>
+<li>Crash shutdown</li>
+<li>Overflow to grade</li>
+<li>Bunded areas flood</li>
+<li>Spillage to unbunded area</li></td>
+</tr>
+<tr>
+<td> </td>
+<td>Falls, Material dropping</td>
+<td><ul>
+<li>Conveyor traverses </li>
+<li>Grinding media loading</li>
+<li>Filter cake dumps</li>
+<li>Reagent bag hoist bays</li></td>
+</tr>
+<tr>
+<td> </td>
+<td>Moving machinery</td>
+<td><ul>
+<li>Entry restriction</li>
+<li>Guarding</li>
+<li>Pinch points</li>
+<li>Audible warnings</td>
+</tr>
+<tr>
+<td> </td>
+<td>Electrical</td>
+<td><ul>
+<li>HV switchgear</li>
+<li>Earth leakage</li>
+<li>Buried cables</li>
+<li>Lightning</li>
+<li>Waste</td>
+</tr>
+<tr>
+<td> </td>
+<td>Chemical, materials, burns</td>
+<td><ul>
+<li>Dangerous goods</li>
+<li>Hot Gases, liquids, solids</li>
+<li>Hot surfaces</li>
+<li>Cryogenic materials</li>
+<li>Radioactivity</td>
+</tr>
+<tr>
+<td> </td>
+<td>Environment & Community</td>
+<td><ul>
+<li>Legislative compliance</li>
+<li>Aesthetics</li>
+<li>Light & Noise</li>
+<li>Odours</li>
+<li>Traffic congestion</td>
+</tr>
+<tr>
+<td> </td>
+<td>Natural events</td>
+<td><ul>
+<li>Flooding</li>
+<li>Cyclone</li>
+<li>Earthquake</li>
+<li>Fire</li></td>
+</tr>
+
+</table>
+
+</div>
 
 </body>
 </html>
