--- a/index.htm
+++ b/index.htm
@@ -97,11 +97,11 @@ img {
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Equipment Design</a>
     <div4 class="dropdown-content">
-      <a href="#">Oil & Gas</a>
-      <a href="#">Chemicals</a>
-      <a href="#">Fertilizers</a>
-      <a href="#">Minerals & Metals</a>
-      <a href="#">Environmental</a>
+      <a href="Oil.htm">Oil & Gas</a>
+      <a href="Chem.htm">Chemicals</a>
+      <a href="Fert.htm">Fertilizers</a>
+      <a href="Met.htm">Minerals & Metals</a>
+      <a href="Env.htm">Environmental</a>
     </div4>   
   </li>
   <li><a href="publications.htm">Publications</a></li>
