--- a/contact.htm
+++ b/contact.htm
@@ -29,7 +29,7 @@ body {
 <li style="color:blue;font-size:200%;"><b>Resource Technology Pty Ltd</b></li><br>
 <li style="color:blue;font-size:200%;"><b>Ph:+61 400 793 828</b></li><br>
 <li style="color:blue;font-size:200%;"><b>Email: duckworthga@gmail.com</b></li><br>
-<li style="color:blue;font-size:200%;"><b>www.gduckworth-design.github.io</b></li><br>
+<li style="color:blue;font-size:200%;"><b>https://gduckworth-design.github.io</b></li><br>
 </ul> 
 </div>
 
