--- a/index.htm
+++ b/index.htm
@@ -89,19 +89,23 @@ img {
     <div3 class="dropdown-content">
       <a href="Hazid.htm">HAZID</a>
       <a href="Hazop.htm">HAZOP</a>
+      <a href="HazTrp.htm">Some Hazop Issues</a>
       <a href="Risk Assessment.htm">Risk Assessment</a>
       <a href="Hazardous Areas.htm">Hazardous Area Assessment</a>
-      <a href="Safety.htm">Safety In Design</a>
     </div3>   
   </li>
   <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Equipment Design</a>
+    <a href="javascript:void(0)" class="dropbtn">Process Design</a>
     <div4 class="dropdown-content">
-      <a href="Oil.htm">Oil & Gas</a>
-      <a href="Chem.htm">Chemicals</a>
-      <a href="Fert.htm">Fertilizers</a>
-      <a href="Met.htm">Minerals & Metals</a>
-      <a href="Env.htm">Environmental</a>
+      <a href="Flosh.htm">Flow sheeting</a>
+      <a href="Meb.htm">Material & Energy Balances</a>
+      <a href="Heat.htm">Heat Transfer</a>
+      <a href="Mast.htm">Mass Transfer</a>
+      <a href="Comn.htm">Comminution</a>
+      <a href="Class.htm">Size Classification</a>
+      <a href="Thick.htm">Thickening & Filtration</a>
+      <a href="SxIx.htm">Solvent Extraction & Ion Exchange</a>
+
     </div4>   
   </li>
   <li><a href="publications.htm">Publications</a></li>
@@ -116,4 +120,5 @@ img {
 
 </body>
 </html>
+
 
