--- a/Comn.htm
+++ b/Comn.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Chemicals</title>
+<title>Oil & Gas</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body style="background-color:#83CBEB;">
