--- a/index.htm
+++ b/index.htm
@@ -94,21 +94,8 @@ img {
       <a href="Hazardous Areas.htm">Hazardous Area Assessment</a>
     </div3>   
   </li>
-  <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Process Design</a>
-    <div4 class="dropdown-content">
-      <a href="Flosh.htm">Flow sheeting</a>
-      <a href="Meb.htm">Material & Energy Balances</a>
-      <a href="Heat.htm">Heat Transfer</a>
-      <a href="Mast.htm">Mass Transfer</a>
-      <a href="Comn.htm">Comminution</a>
-      <a href="Class.htm">Size Classification</a>
-      <a href="Thick.htm">Thickening & Filtration</a>
-      <a href="SxIx.htm">Solvent Extraction & Ion Exchange</a>
-
-    </div4>   
-  </li>
-  <li><a href="publications.htm">Publications</a></li>
+<li><a href="ProcDes.htm">Process Design</a></li>
+    <li><a href="publications.htm">Publications</a></li>
   <li><a href="contact.htm">Contact</a></li>
   </ul>
 
