--- a/HazTrp.htm
+++ b/HazTrp.htm
@@ -72,26 +72,26 @@ Following are some examples to be aware of:</p>
 <a href="#Cont"></a>
 <h2>SECTION CONTENTS</h2>
 <ul>
-<li><a href="#Doub"><b>Double Jeopardy</a></li>
-<li><a href="#Dimen">P&IDs are not Dimensioned Drawings</a></li>
-<li><a href="#Chaz1">Control System Hidden Measured Variable - Programmed</a></li>
-<li><a href="#Chaz2">Combined Batch Cycle and Continuous Operation - Interference</a></li>
-<li><a href="#Vend">Vendor Recommendation Ignored</a></li>
-<li><a href="#Mode">Changes in Operating Mode</a></b></li>
+<li><a href="#Doub"><b>&#11208;&nbsp;&nbsp;&nbsp;Double Jeopardy</a></li>
+<li><a href="#Dimen">&#11208;&nbsp;&nbsp;&nbsp;P&IDs are not Dimensioned Drawings</a></li>
+<li><a href="#Chaz1">&#11208;&nbsp;&nbsp;&nbsp;Control System Hidden Measured Variable - Programmed</a></li>
+<li><a href="#Chaz2">&#11208;&nbsp;&nbsp;&nbsp;Combined Batch Cycle and Continuous Operation - Interference</a></li>
+<li><a href="#Vend">&#11208;&nbsp;&nbsp;&nbsp;Vendor Recommendation Ignored</a></li>
+<li><a href="#Mode">&#11208;&nbsp;&nbsp;&nbsp;Changes in Operating Mode</a></b></li>
 </div>
 <div class="main" id="Doub">
   <h2>Double Jeopardy</h2>
 <p>Probably one of the most contentious issues in the conduct of a Hazop is the concept of "Double Jeopardy".
 Double Jeopardy normally refers to a scenario where multiple independent failures occur at the same time.
-Double Jeopardy is invoked under these circumstances so that the Hazop team can limit their investigations to scenarios that are reasonably likely to occur in practice. Key points to consider are:</p>
+Double Jeopardy is invoked under these circumstances so that the Hazop team can limit their investigations to scenarios that are reasonably likely to occur in practice. The following key items are NOT considered to be Double Jeopardy:</p>
 <ul>
-<li><b> . Double Jeopardy applies only to independent failures that are not related by a common cause</li>
-<li> . Latent failures (i.e. undetected failures) that contribute to another failure are not Double Jeopardy</li>
-<li> . Failure of a safeguard is not considered to be Double Jeopardy</li>
-<li> . Human intervention, operational changes, maintenance activities resulting in the risk of simultaneous failures are not considered to be Double Jeopardy</li></b>
+<li><b>&#11045;&nbsp;&nbsp;&nbsp;Double Jeopardy applies only to independent failures that are not related by a common cause</li>
+<li>&#11045;&nbsp;&nbsp;&nbsp;Latent failures (i.e. undetected failures) that contribute to another failure are not Double Jeopardy</li>
+<li>&#11045;&nbsp;&nbsp;&nbsp;Failure of a safeguard is not considered to be Double Jeopardy</li>
+<li>&#11045;&nbsp;&nbsp;&nbsp;Human intervention, operational changes, maintenance activities that result in the risk of simultaneous failures</li></b>
 </ul>
 <p>It is recommended that Double Jeopardy scenarios always be investigated on a case by case basis, considering the consequences that may be involved rather than routinely dismissing them.</p>
-<p>The following example shows how confusing evaluation of double Jeopardy situations can lead to serious hazards. In the example shown below carbon soot and entrained hydrogen gas is discharged from a reactor into a carbon drop vessel on a batch basis. At the completion of the drop, the valve to the reactor is closed and a nitrogen purge valve opens, purging hydrogen from the drop vessel to a flare header. At the completion of the nitrogen purge step, the valve to flare is closed and a valve to a carbon hopper is opened, nitrogen is then used to pneumatically convey the carbon to the carbon hopper. The carbon hopper then feeds a carbon sizing circuit to remove carbon fines, and return correctly sized carbon to the reactor. The first step is a mechanical sizer which is fed through a rotary valve. This operation is open to air and is the first time the purged carbon comes into contact with oxygen. On one occasion during commissioning, despite the fact that the purge step operated, the purge failed to remove the contained hydrogen. The hydrogen was then conveyed to the mechanical sizing step along with the carbon, and when it contacted oxygen the hydrogen gas mixture exploded (probably initiated by the mechanical sizer). Fortunately no one was injured, but significant damage was done to the mechanical sizer.</p>
+<p>The following example shows how confusing evaluation of Double Jeopardy situations can lead to serious hazards. In the example shown below carbon soot and entrained hydrogen gas is discharged from a reactor into a carbon drop vessel on a batch basis. At the completion of the drop, the valve to the reactor is closed and a nitrogen purge valve opens, purging hydrogen from the drop vessel to a flare header. At the completion of the nitrogen purge step, the valve to flare is closed and a valve to a carbon hopper is opened, nitrogen is then used to pneumatically convey the carbon to the carbon hopper. The carbon hopper then feeds a carbon sizing circuit to remove carbon fines, and return correctly sized carbon to the reactor. The first step is a mechanical sizer which is fed through a rotary valve. This operation is open to air and is the first time the purged carbon comes into contact with oxygen. On one occasion during commissioning, despite the fact that the purge step operated, the purge failed to remove the contained hydrogen. The hydrogen was then conveyed to the mechanical sizing step along with the carbon, and when it contacted oxygen the hydrogen gas mixture exploded (probably initiated by the mechanical sizer). Fortunately no one was injured, but significant damage was done to the mechanical sizer.</p>
 <p>The Hazop had explicitly assumed that if the purge step operated then the hydrogen would be removed. The system would not allow a transfer if the purge step had not occurred, but even if the purge step occured, there was no separate method of checking  whether the purge of hydrogen had actually been achieved. Failure of the purge to be effective was considered to be a Double Jeopardy situation. But in reality this was a latent failure of the purge step and should not have been considered to be Double Jeopardy</p>
 <img src="fsht.jpg" alt=" " style="width:500px;height:300px;"><br>
 <a href="#Cont">Back to Contents</a>
